--- a/medusa/.env.template
+++ b/medusa/.env.template
@@ -1,11 +1,12 @@
-STORE_CORS=http://localhost:8000,https://docs.medusajs.com
-ADMIN_CORS=http://localhost:7000,http://localhost:7001,https://docs.medusajs.com
-AUTH_CORS=http://localhost:7000,http://localhost:7001,https://docs.medusajs.com
+STORE_CORS=http://localhost:8000,https://docs.medusajs.com, http://localhost:9000
+ADMIN_CORS=http://localhost:7000,http://localhost:7001,https://docs.medusajs.com, http://localhost:9000
+AUTH_CORS=http://localhost:7000,http://localhost:7001,https://docs.medusajs.com, http://localhost:9000
 REDIS_URL=redis://localhost:6379
 JWT_SECRET=supersecret
 COOKIE_SECRET=supersecret
 DATABASE_URL=postgresql://postgres:postgres@localhost:5432/medusa
 STRIPE_API_KEY=
+BACKEND_URL=http://localhost:9000
 
 # minio
 S3_FILE_URL=http://localhost:9090/medusa
